# NES-Emulator

./: .gitignore  CMakeLists.txt  README.md
include/: addressing_mode.h  apu.h  bus.h  cartridge.h  cpu.h  joypad.h  mem.h  opcodes.h  ppu.h
include/ppu/registers/: addr.h  control.h  mask.h  scroll.h  status.h
include/render/: frame.h  palette.h  renderer.h  tile.h
src/: apu.cpp  bus.cpp  cartridge.cpp  cpu.cpp  joypad.cpp  main.cpp  opcodes.cpp  ppu.cpp  trace.cpp
src/ppu/registers/: addr.cpp  control.cpp  mask.cpp  scroll.cpp  status.cpp
src/render/: frame.cpp  renderer.cpp  tile.cpp
test/: nestest_runner.cpp  trace.h
test/roms/: snake
